# ballista

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  Secrets.toml.example  Shuttle.toml
src/: files.rs  github.rs  lib.rs  open_ai.rs  qdrant.rs  state.rs
src/llm/: candle.rs  mod.rs  open_ai.rs
src/routes/: mod.rs  prompt.rs  webhooks.rs
static/: index.html
