[package]
name = "ballista"
version = "0.1.0"
edition = "2021"
default-run = "ballista"

# binary files - note that the Shuttle binary must be the primary binary file
[[bin]]
name = "ballista"
path = "src/bin/shuttle.rs"
required-features = ["shuttle"]

[[bin]]
name = "standalone"
path = "src/bin/standalone.rs"

[features]
default = ["shuttle", "candle", "openai"]
shuttle = [
        "dep:shuttle-runtime",
        "dep:shuttle-axum",
        "dep:shuttle-qdrant",
]
openai = ["dep:openai"]
candle = [
       "dep:candle-nn",
       "dep:candle-core",
       "dep:candle-transformers",
       "dep:hf-hub",
       "dep:tokenizers"
]

[dependencies]
# non-optional dependencies
anyhow = "1.0.82"
async-trait = "0.1.80"
axum = "0.7.5"
axum-streams = { version = "0.14.2", features = ["text"] }
bytes = "1.6.0"
flate2 = "1.0.30"
futures = "0.3.30"
http-body = "1.0.0"
http-body-util = "0.1.1"
octocrab = "0.38.0"
qdrant-client = "1.9.0"
regex = "1.10.4"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.15"
tokio-tar = "0.3.1"
tower-http = { version = "0.5.2", features = ["fs"] }

# shuttle deployment dependencies
shuttle-axum = { version = "0.44.0", optional = true }
shuttle-qdrant = { version = "0.44.0", optional = true }
shuttle-runtime = { version = "0.44.0", optional = true }

# openai
openai = { version = "1.0.0-alpha.14", optional = true }

# candle (huggingface)
candle-nn = { version = "0.5.0", optional = true }
candle-core = { version = "0.5.0", optional = true }
candle-transformers = { version = "0.5.0", optional = true }
hf-hub = { version = "0.3.2", features = ["tokio"], optional = true }
tokenizers = { version = "0.19.1", optional = true, features = ["hf-hub"] }
fastembed = "3.5.0"

[dev-dependencies]
rusty-hook = "0.11.2"
